--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
@@ -1,19 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <title >Thymeleaf Demo</title>
-
-    <!-- reference CSS file -->
-    <!-- @{} allows us to use a relative path that starts at out app's root, in this case just / -->
-    <link rel="stylesheet" th:href="@{/css/demo.css}" />
-    <!--    Alternative would be: -->
-    <!--    <link rel="stylesheet" href="http://localhost:8080/css/demo.css" />-->
-    <!--    Since Spring Boot serves up everything in the static file on startup-->
 </head>
 
 <body>
-    <p th:text="'Time on the server is ' + ${date}" class="funny"/>
+    Hello World of Spring!
+    <br><br>
+    Student name: <span th:text="${param.studentName}" />
+    The message: <span th:text="${message}" />
 </body>
-
 </html>
