Refactor form to use list of countries from application.properties and inject with @Value

--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
@@ -15,11 +15,8 @@
          <br><br>
          Country:
         <select th:field="*{country}">
-            <option value="USA">United States</option>
-            <option value="BRAZIL">Brazil</option>
-            <option value="FRANCE">France</option>
-            <option value="GERMANY">Germany</option>
-            <option value="INDIA">India</option>
+            <option th:each="tempCountry : ${countries}" th:value="${tempCountry}" th:text="${tempCountry}"></option>
+            <!--each one turns into something like <option value="USA">United States</option>-->
         </select>
          <br><br>
          <input type="submit" value="Submit" />
