Add validated fields for number of passes and postal code

--- a/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/confirmation.html
+++ b/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/confirmation.html
@@ -7,5 +7,7 @@
 <body>
 
 The person has been registered: <span th:text="${person.firstName + ' ' + person.lastName}"></span>
+with <span th:text="${person.freePasses}"></span>  passes.
+Postal code: <span th:text="${person.postalCode}"></span>
 </body>
 </html>
