Add custom error message for when a non-integer is submitted for freePasses
Video 218
And fix typo

--- a/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/name-form.html
+++ b/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/name-form.html
@@ -40,7 +40,7 @@
 
     <br>
 
-    <label for="postalCode">Free passes: </label>
+    <label for="postalCode">Postal code: </label>
     <input id="postalCode" type="text" th:field="*{postalCode}"></input>
     <span th:if="${#fields.hasErrors('postalCode')}"
           th:errors="*{postalCode}"
