Finish section 6 / Add custom validation for a course code
Videos 220-226

--- a/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/confirmation.html
+++ b/07-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/confirmation.html
@@ -9,5 +9,6 @@
 The person has been registered: <span th:text="${person.firstName + ' ' + person.lastName}"></span>
 with <span th:text="${person.freePasses}"></span>  passes.
 Postal code: <span th:text="${person.postalCode}"></span>
+Course code: <span th:text="${person.courseCode}"></span>
 </body>
 </html>
