--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -22,6 +22,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,6 +30,9 @@
                     <td th:text="${emp.firstName}"></td>
                     <td th:text="${emp.lastName}"></td>
                     <td th:text="${emp.email}"></td>
+                    <td>
+                        <a th:href="@{/employees/showFormForUpdate(employeeId=${emp.id})}" class="btn btn-info btn-sm">Update</a>
+                    </td>
                 </tr>
             </tbody>
         </table>
